--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
 
     <application
-        android:label="afet_ihbar_mobile"
+        android:label="Disaster Notification"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
